manage-k8s/StatefullSet/stable-network-id/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: application
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: application
  serviceName: application-headless
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
        - name: application
          image: nginx:1.23.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /usr/share/nginx/html/
              name: html
      volumes:
        - name: html-template
          configMap:
            name: nginx-template
        - name: html
          emptyDir: {}
