manage-k8s/StatefullSet/stable-network-id/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application-headless
spec:
  ports:
  - port: 80
    name: http
  clusterIP: None
  selector:
    app: application
---
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: application
