manage-k8s/StatefullSet/stable-network-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
spec:
  ingressClassName: system-ingress
  rules:
  - host: app.gordey.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
           name: application
           port:
             name: http
